# ia_2025

./: README.md  pyproject.toml  requirements.txt
src/aspirador/: __main__.py  agent.py  joc.py  joc_gui.py
src/monedes/: agent.py  joc.py
src/practica/: __main__.py  agent.py  estat.py  joc.py
src/quiques/: __main__.py  agent.py  agent_amplada.py  agent_profunditat.py  estat.py  joc.py
src/runner/: cli.py
