[project]
name = "ia2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ialib",
    "pygame>=2.6.1",
    "typer>=0.16.0",
]

[project.scripts]
run-task = "runner.cli:app"

[tool.uv.sources]
ialib = { git = "https://github.com/miquelmn/iaLib" }
